--- a/package.json
+++ b/package.json
@@ -53,14 +53,15 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "cross-env": "^5.0.0",
-    "css-loader": "^0.28.0",
-    "enzyme": "^2.7.1",
-    "enzyme-to-json": "^1.5.0",
-    "eslint": "^3.12.2",
+    "css-loader": "^0.28.4",
+    "enzyme": "^2.8.2",
+    "enzyme-to-json": "^1.5.1",
+    "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.1",
     "file-loader": "^0.11.1",
     "gl": "^4.0.3",
@@ -69,12 +70,12 @@
     "jest-cli": "^20.0.4",
     "jsdom": "^11.0.0",
     "json-loader": "^0.5.4",
-    "nock": "^9.0.9",
+    "nock": "^9.0.13",
     "normalize-css": "^2.3.1",
     "postcss": "^6.0.1",
     "postcss-color-function": "^4.0.0",
     "postcss-css-variables": "^0.7.0",
-    "postcss-cssnext": "^2.9.0",
+    "postcss-cssnext": "^2.11.0",
     "postcss-easy-import": "^2.0.0",
     "postcss-import": "^10.0.0",
     "postcss-initial": "^2.0.0",
@@ -86,59 +87,58 @@
     "postcss-simple-vars": "^4.0.0",
     "precss": "^1.4.0",
     "pretty-immutable": "^1.0.1",
-    "react-addons-test-utils": "^15.4.2",
-    "react-test-renderer": "^15.4.2",
-    "redux-mock-store": "^1.2.2",
-    "rimraf": "^2.5.4",
+    "react-addons-test-utils": "^15.5.1",
+    "react-test-renderer": "^15.5.4",
+    "redux-mock-store": "^1.2.3",
+    "rimraf": "^2.6.1",
     "shebang-loader": "^0.0.1",
-    "sinon": "^2.1.0",
-    "source-map-support": "^0.4.11",
+    "sinon": "^2.3.2",
+    "source-map-support": "^0.4.15",
     "style-loader": "^0.18.1",
-    "typescript": "^2.2.1",
+    "typescript": "^2.3.4",
     "updtr": "^1.0.0",
-    "watch": "^1.0.1",
+    "watch": "^1.0.2",
     "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "@turf/turf": "^4.1.0",
-    "autobind-decorator": "^1.3.4",
+    "@turf/turf": "^4.3.1",
+    "autobind-decorator": "^1.4.1",
+    "babel-polyfill": "^6.23.0",
     "data.maybe": "^1.2.2",
     "data.task": "^3.1.1",
-    "express": "^4.14.0",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.17.1",
+    "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
     "postcss-calc": "^6.0.0",
     "postcss-custom-media": "^6.0.0",
     "pouchdb": "^6.2.0",
-    "query-overpass": "^1.2.0",
     "ramda": "^0.24.1",
     "ramda-fantasy": "^0.8.0",
     "react": "^15.5.4",
     "react-autobind": "^1.0.6",
-    "react-datetime": "^2.6.0",
+    "react-datetime": "^2.8.10",
     "react-dimensions": "^1.3.0",
     "react-disqus-thread": "^0.4.0",
-    "react-document-meta": "^2.0.3",
-    "react-dom": "^15.3.1",
+    "react-document-meta": "^2.1.2",
+    "react-dom": "^15.5.4",
     "react-immutable-proptypes": "^2.1.0",
-    "react-map-gl": "^2.0.2",
-    "react-redux": "^5.0.1",
-    "react-router": "^4.0.0",
+    "react-map-gl": "^2.0.3",
+    "react-redux": "^5.0.5",
+    "react-router": "3",
     "react-router-redux": "^4.0.8",
-    "react-share": "^1.9.3",
+    "react-share": "^1.14.1",
     "redux": "^3.6.0",
     "redux-immutable": "^4.0.0",
-    "redux-logger": "^3.0.1",
+    "redux-logger": "^3.0.6",
     "redux-map-gl": "^0.1.0",
     "redux-router": "^2.1.2",
-    "redux-thunk": "^2.1.0",
-    "request": "^2.81.0",
+    "redux-thunk": "^2.2.0",
     "rxjs": "^5.4.0",
     "tls": "0.0.1"
   },
