--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "postcss-calc": "^6.0.0",
     "postcss-custom-media": "^6.0.0",
     "pouchdb": "^6.2.0",
+    "pouchdb-erase": "^1.0.2",
     "query-overpass": "^1.5.0",
     "ramda": "^0.24.1",
     "ramda-fantasy": "^0.8.0",
@@ -144,7 +145,11 @@
     "tls": "0.0.1"
   },
   "babel": {
-    "plugins": ["transform-class-properties", "transform-decorators-legacy", "transform-object-rest-spread"],
+    "plugins": [
+      "transform-class-properties",
+      "transform-decorators-legacy",
+      "transform-object-rest-spread"
+    ],
     "presets": [
       "es2015",
       "stage-2",
