--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "postcss-custom-media": "^6.0.0",
     "pouchdb": "^6.2.0",
     "pouchdb-erase": "^1.0.2",
+    "pouchdb-find": "^6.2.0",
     "promise-to-task": "^1.0.0",
     "query-overpass": "^1.5.0",
     "ramda": "^0.24.1",
@@ -139,6 +140,7 @@
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-map-gl": "^0.1.0",
+    "redux-pouchdb-plus": "^0.8.1",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
     "rxjs": "^5.4.0",
