--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "file-loader": "^0.11.1",
     "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
+    "jasmine": "^2.6.0",
     "jest": "^20.0.4",
     "jest-cli": "^20.0.4",
     "jsdom": "~11.0.0",
