--- a/package.json
+++ b/package.json
@@ -69,24 +69,8 @@
     "jasmine": "^2.6.0",
     "jest": "^20.0.4",
     "jest-cli": "^20.0.4",
-    "jsdom": "~11.0.0",
     "json-loader": "^0.5.4",
     "nock": "^9.0.13",
-    "normalize-css": "^2.3.1",
-    "postcss": "^6.0.1",
-    "postcss-color-function": "^4.0.0",
-    "postcss-css-variables": "^0.7.0",
-    "postcss-cssnext": "^2.11.0",
-    "postcss-easy-import": "^2.0.0",
-    "postcss-import": "^10.0.0",
-    "postcss-initial": "^2.0.0",
-    "postcss-loader": "^2.0.5",
-    "postcss-math": "0.0.8",
-    "postcss-media-variables": "^2.0.0",
-    "postcss-mixins": "^6.0.0",
-    "postcss-nested": "^2.0.2",
-    "postcss-simple-vars": "^4.0.0",
-    "precss": "^1.4.0",
     "pretty-immutable": "^1.0.1",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
@@ -116,15 +100,13 @@
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "jsdom": "~9.9.1",
     "luma.gl": "^3.0.2",
     "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
-    "postcss-calc": "^6.0.0",
-    "postcss-custom-media": "^6.0.0",
     "pouchdb": "^6.2.0",
     "pouchdb-erase": "^1.0.2",
     "pouchdb-find": "^6.2.0",
-    "promise-to-task": "^1.0.0",
     "query-overpass": "^1.5.0",
     "ramda": "^0.24.1",
     "ramda-fantasy": "^0.8.0",
@@ -141,6 +123,7 @@
     "react-map-gl": "^2.0.3",
     "react-redux": "^5.0.5",
     "react-router": "4",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "react-scrollbar": "^0.5.1",
     "redux": "^3.6.0",
