--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
-  "plugins": ["transform-class-properties", "transform-decorators-legacy", "transform-object-rest-spread"],
-  "presets": ["env", "react"]
+  "plugins": ["transform-class-properties", "transform-decorators-legacy", "transform-object-rest-spread", "transform-async-to-generator"],
+  "presets": ["env", "react"],
+  "sourceMap" : "inline"
 }
