--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "~9.9.1",
+    "longjohn": "^0.2.12",
     "luma.gl": "^3.0.2",
     "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
@@ -120,7 +121,6 @@
     "react-document-meta": "^2.1.2",
     "react-dom": "^15.5.4",
     "react-immutable-proptypes": "^2.1.0",
-    "react-map-gl": "^2.0.3",
     "react-redux": "^5.0.5",
     "react-router": "4",
     "react-router-dom": "^4.1.1",
@@ -137,17 +137,7 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "rxjs": "^5.4.0",
+    "stack-trace": "^0.0.10",
     "tls": "0.0.1"
-  },
-  "babel": {
-    "presets": [
-      "env",
-      "react"
-    ],
-    "plugins": [
-      "transform-class-properties",
-      "transform-decorators-legacy",
-      "transform-object-rest-spread"
-    ]
   }
 }
