--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jest": "^20.0.4",
     "jest-cli": "^20.0.4",
     "json-loader": "^0.5.4",
+    "most": "^1.5.0",
     "nock": "^9.0.13",
     "pretty-immutable": "^1.0.1",
     "react-addons-test-utils": "^15.5.1",
@@ -88,6 +89,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "@cycle/time": "^0.8.0",
     "@mapbox/react-geocoder": "^2.5.0",
     "@turf/turf": "^4.3.1",
     "autobind-decorator": "^1.4.1",
