--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "clean": "rimraf build",
     "build:webpack": "webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "start": "nodemon --open --watch webpack.config.js --exec \"webpack-dev-server --env development\"",
-    "start-webpack": "webpack-dev-server --progress --hot --port 3000",
+    "start": "webpack-dev-server --progress --hot --port 3000",
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source --fix",
     "pretest": "npm run lint",
@@ -84,9 +83,10 @@
     "@mapbox/react-geocoder": "^2.5.0",
     "@turf/turf": "^4.3.1",
     "cycle-pouchdb-most-driver": "^0.0.5",
+    "d3-sankey": "^0.7.1",
     "data.maybe": "^1.2.2",
     "data.task": "^3.1.1",
-    "deck.gl": "^4.0.6",
+    "deck.gl": "^4.1.2",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "history": "^4.6.1",
@@ -94,7 +94,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^11.1.0",
     "longjohn": "^0.2.12",
-    "luma.gl": "^3.0.2",
+    "luma.gl": "^4.0.2",
     "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
     "most": "^1.5.1",
@@ -129,6 +129,8 @@
     "redux-responsive": "^4.3.2",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
+    "rescape-ramda": "^1.0.7",
+    "rescape-validate": "^1.0.7",
     "reselect": "^3.0.1",
     "rxjs": "^5.4.0",
     "stack-trace": "^0.0.10"
