--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "eslint-plugin-react": "7.4.0",
     "file-loader": "^0.11.2",
     "gl": "^4.0.4",
-    "jasmine": "^2.8.0",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
     "json-loader": "^0.5.7",
@@ -123,11 +122,10 @@
     "redux-responsive": "^4.3.2",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
-    "rescape-cycle": "^1.5.3",
+    "rescape-cycle": "^1.5.5",
     "rescape-ramda": "^1.2.0",
     "rescape-validate": "^1.2.2",
     "reselect": "^3.0.1",
-    "stack-trace": "^0.0.10",
-    "xstream": "^11.0.0"
+    "stack-trace": "^0.0.10"
   }
 }
