--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.1.1",
     "eslint": "^4.8.0",
     "eslint-plugin-jest": "^21.2.0",
