--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "devDependencies": {
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "enzyme": "^3.0.0",
+    "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.1.1",
     "eslint": "^4.8.0",
@@ -60,8 +60,9 @@
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.4",
     "gl": "^4.0.4",
-    "jest": "^21.2.1",
+    "jest": "test",
     "jest-cli": "^21.2.1",
+    "jest-environment-jsdom": "^21.2.1",
     "json-loader": "^0.5.7",
     "nock": "^9.0.21",
     "nodemon": "^1.12.1",
@@ -90,7 +91,6 @@
     "data.maybe": "^1.2.2",
     "data.task": "^3.1.1",
     "deck.gl": "^4.1.3",
-    "enzyme": "^3.1.0",
     "express": "^4.16.1",
     "express-graphql": "^0.6.11",
     "graphql": "^0.11.7",
